# hs-ari

./: README.md  hie.yaml  hs-ari.cabal  stack.yaml
incomTest/: Main.hs
src/: ARICore.hs  ARIUtils.hs  Comm.hs  FlowTools.hs  GroupCall.hs  Utils.hs  Web.hs
src/ARICore/: ARIChannel.hs  ARIData.hs  ARIFlow.hs  ARIFlowBoot.hs  ARIHelper.hs  BridgeCmds.hs  CallerID.hs  ChannelCmds.hs  ChannelHelper.hs  EventDispatcher.hs  HTTPCommand.hs  HTTPOpts.hs  PJSIPConfigCmd.hs  PlaybackCmds.hs  RecordingCmds.hs
src/ARIUtils/: ChannelUtils.hs  SafeChannel.hs
src/Comm/: CommGate.hs  FlowFactory.hs
src/FlowAppComps/: BasicCallApp.hs  BasicCallApp2.hs  CallbackComp.hs  CallbackComp2.hs  DialingPlan.hs  FlowAppContainer.hs  FlowAppContainerData.hs  FlowAppHelpers.hs
src/FlowAppComps/TeamCall/: TeamCallApp.hs  TeamCallData.hs
src/FlowTools/: DTMFCollector.hs  DialAndIVR.hs  ExtComTool.hs  FlowCallback.hs  FlowCallbackComps.hs  FlowEvDistr.hs  FlowSvc.hs  IVRComps.hs  PJSIPAccount.hs  Playlist.hs  TimerTool.hs
src/GroupCall/: GroupCallAssets.hs  GroupCallData.hs  GroupCallReq.hs  GroupCallSrv.hs
src/TestTools/: FlowCmds.hs
src/Utils/: CallbackCont.hs  DTMF.hs  EventDistr.hs  EventDistrEx.hs  LoggerSetup.hs  MapsContainer.hs  MiscUtils.hs  MonitorCallback.hs  TChanUtils.hs
src/Web/: WSServer.hs  WebServer.hs
test/: ARIDataTest.hs  ARITestEnv.hs  BasicTest.hs  CallbackContPropTest.hs  CallbackContTest.hs  CallbackEventDistrTest.hs  ChannelInStateTest.hs  DTMFTransTest.hs  EventDistrTest.hs  Spec.hs
